[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["Robin Schulz <hello@rschu.me>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "python-playground" }]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.19.0"
fake-useragent = "^1.5.1"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0.20240229"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.9.0"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
